# AU-UAV-ROS

./: README  UAVBase.pro  UAVPlane.pro
AU_UAV_stack/AU_UAV_ROS/: CMakeLists.txt  log4j.properties  manifest.xml
AU_UAV_stack/AU_UAV_ROS/courses/: auburnSimpleTest.course  collisionTest.course  example.course  final_16_1000m_1.course  final_16_1000m_2.course  final_16_1000m_3.course  final_16_500m_1.course  final_16_500m_2.course  final_16_500m_3.course  final_32_1000m_1.course  final_32_1000m_2.course  final_32_1000m_3.course  final_32_500m_1.course  final_32_500m_2.course  final_32_500m_3.course  final_4_1000m_1.course  final_4_1000m_2.course  final_4_1000m_3.course  final_4_500m_1.course  final_4_500m_2.course  final_4_500m_3.course  final_8_1000m_1.course  final_8_1000m_2.course  final_8_1000m_3.course  final_8_500m_1.course  final_8_500m_2.course  final_8_500m_3.course
AU_UAV_stack/AU_UAV_ROS/courses/REU-2012-Tests/: final_16_1000m_1.course  final_16_1000m_2.course  final_16_1000m_3.course  final_16_500m_1.course  final_16_500m_2.course  final_16_500m_3.course  final_32_1000m_1.course  final_32_1000m_2.course  final_32_1000m_3.course  final_32_500m_1.course  final_32_500m_2.course  final_32_500m_3.course  final_4_1000m_1.course  final_4_1000m_2.course  final_4_1000m_3.course  final_4_500m_1.course  final_4_500m_2.course  final_4_500m_3.course  final_8_1000m_1.course  final_8_1000m_2.course  final_8_1000m_3.course  final_8_500m_1.course  final_8_500m_2.course  final_8_500m_3.course
AU_UAV_stack/AU_UAV_ROS/flightData/: simTest0.kml
AU_UAV_stack/AU_UAV_ROS/flightData/NoAvoidance/: final_16_1000m_1_test.kml  (+23 more)
AU_UAV_stack/AU_UAV_ROS/launch/: evaluation.launch  realityOnly.launch  simulatorOnly.launch
AU_UAV_stack/AU_UAV_ROS/msg/: Command.msg  TelemetryUpdate.msg
AU_UAV_stack/AU_UAV_ROS/paths/: square.path
AU_UAV_stack/AU_UAV_ROS/src/: ControlMenu.cpp  KMLCreator.cpp  XBeeIO.cpp  collisionAvoidance.cpp  coordinator.cpp  evaluator.cpp  simulator.cpp  visualization.cpp
AU_UAV_stack/AU_UAV_ROS/srv/: CreateSimulatedPlane.srv  DeleteSimulatedPlane.srv  GoToWaypoint.srv  LoadPath.srv  RequestPlaneID.srv  RequestWaypointInfo.srv  SaveFlightData.srv
(+92 files in other folders)
